se conecta habitos con DB

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 EXPO_PUBLIC_APPWRITE_PROJECT_ID=6866dbc7000c342fdbef
 EXPO_PUBLIC_APPWRITE_ENDPOINT=https://nyc.cloud.appwrite.io/v1
+
+EXPO_PUBLIC_DB_ID="686c118e003a6b93c10c"
+EXPO_PUBLIC_HABITS_COLLECTION_ID="686c11d400206f68d096"
