deslizar derecha ok

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ EXPO_PUBLIC_APPWRITE_ENDPOINT=https://nyc.cloud.appwrite.io/v1
 
 EXPO_PUBLIC_DB_ID="686c118e003a6b93c10c"
 EXPO_PUBLIC_HABITS_COLLECTION_ID="686c11d400206f68d096"
+
+EXPO_PUBLIC_COMPLETIONS_COLLECTION_ID="686d825e001d4034c76c"
+
